# ArenaTrace

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  notes.md
.cargo/: config.toml
boards/TMDT100/: TMDT100.kicad_prl  TMDT100.kicad_pro  TMDT100.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
boards/TMDT1UC1/: TMDT1UC1.kicad_prl  TMDT1UC1.kicad_pro  TMDT1UC1.kicad_sch  design-block-lib-table  fp-info-cache  fp-lib-table  sym-lib-table
boards/libs/: 1060.bak  1060.kicad_sym  ABM8-38.400MHZ-12-D1G-T.bak  ABM8-38.400MHZ-12-D1G-T.kicad_sym  dw3210.bak  dw3210.kicad_sym  dw3220.bak
boards/libs/BAT_1060.pretty/: BAT_1060.kicad_mod
common/: Cargo.toml
common/src/: lib.rs
firmware/anchor/: Cargo.toml  build.rs  memory.x
firmware/anchor/src/: main.rs
firmware/dw3000/: Cargo.toml
firmware/dw3000/src/: driver.rs  error.rs  lib.rs  ll.rs  registers.rs
firmware/tag/: Cargo.toml
firmware/tag/src/: lib.rs  spi.rs
server/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
